--- a/API-.NET-MongoDB/appsettings.json
+++ b/API-.NET-MongoDB/appsettings.json
@@ -7,6 +7,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "mongodb+srv://api:JljVAn9Rj6WhLOkz@cluster0.mstr4.mongodb.net/test?connectTimeoutMS=60000&socketTimeoutMS=60000?retryWrites=true&w=majority",
+  "ConnectionString": "",
   "NomeBanco": "mongodbAPI"
 }
